[metadata]
name = nexusformat
description = Python API to access NeXus data
long_description = file: README.md   
long_description_content_type = text/markdown
url = https://nexpy.github.io/nexpy/
download_url = https://github.com/nexpy/nexusformat
author = Raymond Osborn
author_email = rayosborn@mac.com
license = Modified BSD License
license_files = COPYING
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    numpy
    scipy
    h5py >=2.9
    hdf5plugin
    packaging

[options.packages.find]
where = src

[options.package_data]
nexusformat = notebooks/*.ipynb

[options.entry_points]
console_scripts =
    nexusformat = nexusformat.scripts.nexusformat:main
    nxconsolidate = nexusformat.scripts.nxconsolidate:main
    nxdir = nexusformat.scripts.nxdir:main
    nxduplicate = nexusformat.scripts.nxduplicate:main
    nxstack = nexusformat.scripts.nxstack:main

[options.extras_require]
testing = pytest

[bdist_rpm]
requires = 
    numpy
    scipy
    h5py
    hdf5plugin
